name:                hspell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hspell
license:             BSD3
license-file:        LICENSE
author:              Renan Vaz
maintainer:          renan.piresvz@gmail.com
copyright:           2019 Renan Vaz
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spelling-corrector
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , containers
                      , split
                      , strict
                      , mtl
